--- a/app/src/main/res/layout/recyclerview_menicines.xml
+++ b/app/src/main/res/layout/recyclerview_menicines.xml
@@ -35,7 +35,8 @@
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/active_substance_textview"
         app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:paddingBottom="10dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
